chore: Optimized string access without sun.misc.Unsafe
Requires JVM flags though, falls back to non-optimized