@@ -5,17 +5,17 @@
 package akka.util;
 
 import akka.annotation.InternalApi;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
 import java.lang.reflect.Field;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 
 /** INTERNAL API */
 @InternalApi
 public final class Unsafe {
   public static final sun.misc.Unsafe instance;
 
-  private static final long stringValueFieldOffset;
-  private static final boolean isJavaVersion9Plus;
+  private static final VarHandle STRING_VALUE_HANDLE;
   private static final int copyUSAsciiStrToBytesAlgorithm;
 
   static {
@@ -31,25 +31,31 @@ public final class Unsafe {
       if (found == null) throw new IllegalStateException("Can't find instance of sun.misc.Unsafe");
       else instance = found;
 
-      long fo;
+      VarHandle stringValueHandle;
       try {
-        fo = instance.objectFieldOffset(String.class.getDeclaredField("value"));
-      } catch (NoSuchFieldException nsfe) {
-        // The platform's implementation of String doesn't have a 'value' field, so we have to use
-        // algorithm 0
-        fo = -1;
+        var valueField = String.class.getDeclaredField("value");
+        valueField.setAccessible(true);
+        // Note: requires JVM flag --add-opens=java.base/java.lang=ALL-UNNAMED
+        // FIXME could it be named module instead 'akka-actor'?
+        stringValueHandle =
+            MethodHandles.privateLookupIn(String.class, MethodHandles.lookup())
+                .unreflectVarHandle(valueField);
+      } catch (NoSuchFieldException
+          | IllegalAccessException
+          | java.lang.reflect.InaccessibleObjectException ex) {
+        // The platform's implementation of String doesn't have a 'value' field, or we are not
+        // allowed
+        // to touch it, so we have to use algorithm 0
+        stringValueHandle = null;
       }
-      stringValueFieldOffset = fo;
+      STRING_VALUE_HANDLE = stringValueHandle;
 
-      isJavaVersion9Plus = isIsJavaVersion9Plus();
-
-      if (stringValueFieldOffset > -1) {
+      if (STRING_VALUE_HANDLE != null) {
         // Select optimization algorithm for `copyUSAciiBytesToStr`.
         // For example algorithm 1 will fail with JDK 11 on ARM32 (Raspberry Pi),
         // and therefore algorithm 0 is selected on that architecture.
         String testStr = "abc";
-        if (isJavaVersion9Plus && testUSAsciiStrToBytesAlgorithm1(testStr))
-          copyUSAsciiStrToBytesAlgorithm = 1;
+        if (testUSAsciiStrToBytesAlgorithm1(testStr)) copyUSAsciiStrToBytesAlgorithm = 1;
         else if (testUSAsciiStrToBytesAlgorithm2(testStr)) copyUSAsciiStrToBytesAlgorithm = 2;
         else copyUSAsciiStrToBytesAlgorithm = 0;
       } else
@@ -59,17 +65,6 @@ public final class Unsafe {
     } catch (Throwable t) {
       throw new ExceptionInInitializerError(t);
     }
-  }
-
-  static boolean isIsJavaVersion9Plus() {
-    // See Oracle section 1.5.3 at:
-    // https://docs.oracle.com/javase/8/docs/technotes/guides/versioning/spec/versioning2.html
-    final int[] version =
-        Arrays.stream(System.getProperty("java.specification.version").split("\\."))
-            .mapToInt(Integer::parseInt)
-            .toArray();
-    final int javaVersion = version[0] == 1 ? version[1] : version[0];
-    return javaVersion > 8;
   }
 
   static boolean testUSAsciiStrToBytesAlgorithm0(String str) {
@@ -93,7 +88,7 @@ public final class Unsafe {
       byte[] bytes = new byte[str.length()];
 
       // copy of implementation in copyUSAciiBytesToStr
-      final byte[] chars = (byte[]) instance.getObject(str, stringValueFieldOffset);
+      final byte[] chars = (byte[]) STRING_VALUE_HANDLE.get(str);
       System.arraycopy(chars, 0, bytes, 0, str.length());
       // end copy
 
@@ -109,7 +104,7 @@ public final class Unsafe {
       byte[] bytes = new byte[str.length()];
 
       // copy of implementation in copyUSAciiBytesToStr
-      final char[] chars = (char[]) instance.getObject(str, stringValueFieldOffset);
+      final char[] chars = (char[]) STRING_VALUE_HANDLE.get(str);
       int i = 0;
       while (i < str.length()) {
         bytes[i] = (byte) chars[i++];
@@ -136,10 +131,10 @@ public final class Unsafe {
 
   public static void copyUSAsciiStrToBytes(String str, byte[] bytes) {
     if (copyUSAsciiStrToBytesAlgorithm == 1) {
-      final byte[] chars = (byte[]) instance.getObject(str, stringValueFieldOffset);
+      final byte[] chars = (byte[]) STRING_VALUE_HANDLE.get(str);
       System.arraycopy(chars, 0, bytes, 0, str.length());
     } else if (copyUSAsciiStrToBytesAlgorithm == 2) {
-      final char[] chars = (char[]) instance.getObject(str, stringValueFieldOffset);
+      final char[] chars = (char[]) STRING_VALUE_HANDLE.get(str);
       int i = 0;
       while (i < str.length()) {
         bytes[i] = (byte) chars[i++];
@@ -156,7 +151,7 @@ public final class Unsafe {
     int i = 0;
 
     if (copyUSAsciiStrToBytesAlgorithm == 1) {
-      final byte[] chars = (byte[]) instance.getObject(str, stringValueFieldOffset);
+      final byte[] chars = (byte[]) STRING_VALUE_HANDLE.get(str);
       while (i < str.length()) {
         long x = s0 ^ (long) chars[i++]; // Mix character into PRNG state
         long y = s1;
@@ -169,7 +164,7 @@ public final class Unsafe {
         s1 = x ^ y;
       }
     } else if (copyUSAsciiStrToBytesAlgorithm == 2) {
-      final char[] chars = (char[]) instance.getObject(str, stringValueFieldOffset);
+      final char[] chars = (char[]) STRING_VALUE_HANDLE.get(str);
       while (i < str.length()) {
         long x = s0 ^ (long) chars[i++]; // Mix character into PRNG state
         long y = s1;
